youker-assistant (2.0.4) wily; urgency=low

  * Distinguish system structure.
  * Modify translations(LP: #1480175).

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 27 Aug 2015 20:04:05 +0800

youker-assistant (2.0.3) wily; urgency=low

  * Access FT Arm settings and information.
  * Deal with situation when the scanning garbage is empty.
  * Display hardware manufacturer logo.
  * Add Gio.Settings notify for Unity and Mate settings.
  * Make interface switching more smoothly.
  * Adjust the layout of interface.
  * Beautify skin center, menu, info module and setting module.
  * Rewrite skin center, aboutdialog and animation.
  * Add upgrade function.
  * Delete debug logs and command history.
  * Rewrite camera module and replace pygame with opencv.
  * Make dash blur experimental normal(LP: #1430118).
  * Modify custom skin filter(LP: #1475074).
  * Modify cleanerdetailwidget.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 16 Jul 2015 13:34:35 +0800

youker-assistant (2.0.2) vivid; urgency=low

  * Add mate-desktop-environment settings.
  * Deal with system information for mate.
  * Add restore button for font.
  * Modify system info display model.
  * Add energy conserving model.
  * Fixed battery information(LP: #1430128).

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Wed, 15 Apr 2015 13:11:15 +0800

youker-assistant (2.0.1) vivid; urgency=low

  * Achieve low CPU occupancy rate.
  * Improve UI.
  * Fixed some bug.
  * Deal with system information access exception.
  * Deal with autostart Apps.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 23 Mar 2015 21:36:55 +0800

youker-assistant (2.0.0) vivid; urgency=low

  * New UI.
  * Fixed FileDialog and LoginDialog.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 20 Feb 2015 22:16:28 +0800

youker-assistant (1.3.3-0ubuntu1) vivid; urgency=low

  * Modify control and desktop file.
  * Display animation when cleaning up garbage.