@@ -2,8 +2,9 @@ youker-assistant (2.0.4) wily; urgency=low
 
   * Distinguish system structure.
   * Modify translations(LP: #1480175).
+  * Wily replaces org.gnome.settings-daemon.peripherals.touchpad with org.gnome.desktop.peripherals.touchpad.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 27 Aug 2015 20:04:05 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 29 Oct 2015 11:54:37 +0800
 
 youker-assistant (2.0.3) wily; urgency=low
 
